# z

./: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  clippy.toml  install.sh  release-please-config.json
.github/workflows/: release-please.yml  release.yml
src/: arch.rs  cache.rs  install.rs  list.rs  main.rs  releases.rs  symlink.rs
tests/: cli.rs
