[package]
name = "z"
version = "0.1.0"
edition = "2021"
description = "Interactively manage your Zig versions"
license = "MIT"
repository = "https://github.com/THernandez03/z"
keywords = ["zig", "version-manager", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "z"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
console = "0.15"
dialoguer = "0.11"
flate2 = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
xz2 = "0.1"
zip = "2"

[profile.release]
opt-level = 3
lto = true
strip = true
