[package]
name = "z"
version = "0.4.0"
edition = "2021"
description = "Interactively manage your Zig versions"
license = "MIT"
repository = "https://github.com/THernandez03/z"
keywords = ["zig", "version-manager", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "z"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
console = "0.16.3"
dialoguer = "0.12"
dirs-next = "2"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tar = "0.4.45"
xz2 = "0.1.7"
zip = "8.5.1"

[profile.release]
opt-level = 3
lto = true
strip = true

[dev-dependencies]
tempfile = "3.27.0"
